v2 com algumas novas funções e alterações no swagger
